Replaced deprecated parameters